# triangle-splatting2

./: .gitignore  BASH_eval_flowers.sh  CMakeLists.txt  DelaunayTriangulation_Bash  compile.sh  create_video.py  requirement-pytorch3d  requirements.txt
Dtriangle-splatting2assets360_extra_scenesflowers_render-train/: cfg_args  events.out.tfevents.1764501841.df26e6595597.4519.0
submodules/diff-triangle2-rasterization/: CMakeLists.txt  README.md  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-triangle2-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-triangle2-rasterization/diff_triangle_rasterization/: __init__.py
